--- a/style.css
+++ b/style.css
@@ -1,3 +1,26 @@
+body {
+    padding: 50px 0px 0px 0px;
+    z-index: 0;
+    text-align: justify;
+  }
+
+  .navbar-dark {
+    background-color: #418C11;
+  }
+
+.row-header {
+    margin: 0px auto;
+    /* padding: 0px 0px; */
+  }
+  
+  .row-content {
+    margin: 0px auto;
+    padding: 50px 0px;
+    border-bottom: 1px ridge;
+    min-height: 400px;
+  }
+
+
 .footer {
     background: #e9ffdb;
   }
