--- a/style.css
+++ b/style.css
@@ -33,4 +33,12 @@ img {
   }
 .footer {
     background: #e9ffdb;
+    margin: 0px auto;
+  padding: 20px 0px;
+}
+
+address {
+  font-size: 80%;
+  margin: 0px;
+  color: #0f0f0f;
 }
